--- a/views/footer.haml
+++ b/views/footer.haml
@@ -1,5 +1,8 @@
 %footer.branding
   %p
+    Developed by
+    = succeed "." do
+      %a(href="http://weibo.com/cao7113") Caory
     Powered by Nesta, a
     = succeed "." do
-      %a(href="http://nestacms.com") Ruby CMS
+      %a(href="https://github.com/gma/nesta") Ruby CMS
