--- a/views/footer.haml
+++ b/views/footer.haml
@@ -5,4 +5,4 @@
       %a(href="http://weibo.com/cao7113") Caory
     Powered by Nesta, a
     = succeed "." do
-      %a(href="https://github.com/gma/nesta") Ruby CMS
+      %a(href="https://github.com/cao7113/nesta") Ruby CMS
