--- a/views/footer.haml
+++ b/views/footer.haml
@@ -3,6 +3,9 @@
     Developed by
     = succeed "." do
       %a(href="http://weibo.com/cao7113") Caory
-    Powered by Nesta, a
+    Powered by 
     = succeed "." do
-      %a(href="https://github.com/cao7113/nesta") Ruby CMS
+      %a(href="https://github.com/cao7113/nesta") Nesta, a Ruby CMS
+    Stand on
+    = succeed "." do
+      %a(href="https://www.digitalocean.com/?refcode=3c748489f0f5") Digital Ocean
